--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "author": "Joscelyn Owen",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "helmet": "^3.21.0",
     "knex": "^0.19.4",
+    "session": "^0.1.0",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
